--- a/docs/300_DB設計方針.md
+++ b/docs/300_DB設計方針.md
@@ -14,14 +14,21 @@
 - `deleted_at`: 削除日時。値があれば削除済みとみなす（ソフト削除）。
 - `deleted_by`: 削除ユーザーID。
 
-## 3. 索引（インデックス）方針
+## 3. ID生成方針
+- **UUID v7**: すべてのテーブルの主キー（`id`）には **UUID v7** を使用する。
+  - **利点**: タイムスタンプベースのため、時系列順にソート可能。勤怠データやログの範囲検索が効率的。
+  - **実装**: PostgreSQL関数 `gen_uuid_v7()` を定義し、デフォルト値として使用。
+  - **RFC準拠**: RFC 4122に準拠した標準形式。
+- **外部露出**: APIで返却するIDもUUID v7とし、推測可能な連番（シークエンス）は避ける。
+
+## 4. 索引（インデックス）方針
 - **基本**: `company_id` を第1キーとする複合インデックスを多用する。
 - **部分インデックス (Partial Index)**:
     - ソフト削除を考慮し、`WHERE deleted_at IS NULL` を付けたユニーク制約を推奨。
     - 例: `CREATE UNIQUE INDEX uq_users_email ON users(email) WHERE deleted_at IS NULL;`
 - **外部キー**: すべての関係に対して外部キー制約（FOREIGN KEY）を設定し、参照整合性を担保する。
 
-## 4. テーブル用途概要（抜粋）
+## 5. テーブル用途概要（抜粋）
 
 | テーブル群 | 主要な用途 |
 | :--- | :--- |
@@ -34,12 +41,12 @@
 | **audit_logs** | データの変更履歴（Before/After）。 |
 | **job_runs** | 非同期ジョブの管理。 |
 
-## 5. 制約方針
+## 6. 制約方針
 - **CHECK制約**: ステータス値、金額の非負数チェック等に積極的に利用する。
 - **NOT NULL**: 必須項目には必ず付与し、アプリケーション側での null 考慮漏れを防ぐ。
 - **DEFERRABLE**: 循環参照（例：UserとCompanyの相互作成）に対応するため、初期データ投入等で制約チェックを遅延可能にする。
 
-## 6. 主要な値の定義
+## 7. 主要な値の定義
 
 ### 打刻イベント (time_clock_events)
 打刻の証跡として、以下の値を管理する。
