--- a/docs/500_API基本方針.md
+++ b/docs/500_API基本方針.md
@@ -39,7 +39,7 @@
 ```
 
 ## 4. 特殊なヘッダ
-- `X-Request-Id`: クライアントまたはゲートウェイで生成されたUUID。
+- `X-Request-Id`: クライアントまたはゲートウェイで生成されたUUID v7。
     - SYSTEM_LOGS, 監査ログ, ジョブログのすべてにこのIDを記録し、調査時の紐付けに使用する。
 
 ## 5. ページング・ソート
@@ -47,6 +47,7 @@
 - ソート: `?sort=happened_at:desc,id:asc`
 
 ## 6. IDの扱い
-- すべてのIDには **UUID v4** を使用する。
+- すべてのIDには **UUID v7** を使用する。
 - 外部露出するIDもUUIDとし、推測可能な連番（シークエンス）は避ける。
+- **UUID v7の利点**: タイムスタンプベースのため、時系列順にソート可能。勤怠データやログの範囲検索が効率的。
 
