--- a/docs/100_基本設計.md
+++ b/docs/100_基本設計.md
@@ -34,7 +34,10 @@
 | | 給与計算・明細確定 | Admin |
 | | 支払処理（FBデータ出力） | Admin |
 | | 社員・グループ・単価マスタ | Admin |
-| **システム管理** | 監査ログ・ジョブ履歴 | System Admin |
+| **システム管理** | 会社設定管理 | System Admin |
+| | 契約・プラン管理 | System Admin |
+| | 全ユーザー・権限管理 | System Admin |
+| | 監査ログ・ジョブ履歴 | System Admin |
 
 詳細な設計図については以下を参照してください。
 - [画面遷移図 (Mermaid)](./200_画面遷移図.mmd)
