refactor(docs): auriaryのフォルダ分け構成をAuraTimeに適用
- フォルダ構造を再編成（000_要件定義、100_基本設計、200_詳細設計、300_開発、400_テスト、900_リリース）
- 既存ファイルを適切なフォルダに移動
- ファイル名を統一（番号付けの調整）
- @README.mdを作成して全体の目次を更新
- すべてのリンクを新しいパスに更新

これにより、ドキュメントの管理性と拡張性が向上し、auriaryと統一された構成となった。

--- a/docs/000_要件定義/090_決定事項_未決定事項.md
+++ b/docs/000_要件定義/090_決定事項_未決定事項.md
@@ -10,16 +10,15 @@
 - **計算タイミング**: 給与計算は非同期ジョブ（`job_runs`）で実行。
 - **ロック概念**: 期間締め（Closed）および明細確定（Finalized）による段階的ロック。
 - **ユーザー名管理**: 給与計算および法定書類対応のため、氏名を「姓・名」に分割して管理（フリガナ含む）。
+- **フロントエンドスタック**: Next.js 16.0.10以上 + TypeScript（必須）。JavaScriptは使用しない。
 
 ## 2. 未決定事項（今後の検討課題）
 - **認証の詳細方式**: OAuth2/OIDC（外部連携）を行うか、内製JWTのみとするか。
 - **RLS (Row Level Security)**: DB層での強制的隔離の実装。
 - **給与計算エンジンの言語**: 柔軟な数式設定を可能にするためのDSL（Domain Specific Language）導入の是非。
-- **フロントエンドスタック**: React, Vue, またはサーバーサイドレンダリング（Laravel等）の決定。
 - **データアーカイブ方針**: 7年以上保管が義務付けられる法定帳票データの長期保存方法。
 
 ## 3. 推奨案
 - **認証**: 将来的な他社連携を見据え、OAuth2/OIDC 準拠の設計を推奨。
 - **計算**: 計算ロジックの複雑化に備え、スクリプトエンジン（Lua, JavaScript等）の組み込みを検討。
 - **UI**: 複雑な勤怠表操作には、高いレスポンス性が得られる Single Page Application (SPA) 構成を推奨。
-
