--- a/docs/100_基本設計/110_基本設計.md
+++ b/docs/100_基本設計/110_基本設計.md
@@ -3,7 +3,7 @@
 ## 1. 機能一覧
 
 ### 勤怠・シフト
-- **打刻管理**: 出退勤、休憩入り/戻り（Web/モバイル/ICカード）
+- **打刻管理**: 出退勤、休憩入り/戻り（Web/モバイル、ICカードは将来対応）
 - **日次集計**: 生ログからの労働時間（法定内、残業、深夜、休憩）自動算出
 - **シフト管理**: シフトテンプレートの作成、個人別/日別シフト割当
 - **コストセンター割当**: 勤務日ごとの費用計上先グループの指定
@@ -40,8 +40,8 @@
 | | 監査ログ・ジョブ履歴 | System Admin |
 
 詳細な設計図については以下を参照してください。
-- [画面遷移図 (Mermaid)](./200_画面遷移図.mmd)
-- [画面レイアウト案 (Mermaid)](./210_画面レイアウト案.mmd)
+- [画面遷移図 (Mermaid)](../200_DetailedDesign/203_DetailedDesign_UI_遷移図.mmd)
+- [画面レイアウト案 (Mermaid)](../200_DetailedDesign/203_DetailedDesign_UI_レイアウト.mmd)
 
 ## 3. 権限モデルとアクセス範囲
 
@@ -65,4 +65,3 @@
 - 部署、勤務地、チーム、コストセンターはすべて `groups.type` で識別。
 - 階層構造は `parent_group_id` による自己参照で実現。
 - 従業員の所属は `employee_groups` で履歴管理（兼務対応）。
-
