--- a/docs/200_詳細設計/211_DB.md
+++ b/docs/200_詳細設計/211_DB.md
@@ -54,7 +54,7 @@
 | カラム | 値の例（区分） | 内容 |
 | :--- | :--- | :--- |
 | **type** | `in`, `out`, `break_in`, `break_out` | 打刻の種別（出勤、退勤、休憩入、休憩戻）。 |
-| **source** | `web`, `mobile`, `ic_card`, `admin` | 打刻の入力元。不正検知や証跡として利用。 |
+| **source** | `web`, `mobile`, `ic_card`, `admin` | 打刻の入力元。不正検知や証跡として利用。注: `ic_card`は将来対応。 |
 | **note** | 自由記述、位置情報、IPアドレス等 | 打刻時の補足情報。遅延理由や、システムによる自動記録。 |
 
 ### ステータス値の定義
@@ -87,4 +87,3 @@
 | :--- | :--- | :--- |
 | **role** (membership) | `system_admin`, `admin`, `manager`, `employee` | システム上の操作権限（認可）を定義。 |
 | **role_in_group** | `leader`, `member` | 部署やチーム内での役割。承認ルートの自動決定等に利用。 |
-
