--- a/docs/200_詳細設計/231_API_勤怠.md
+++ b/docs/200_詳細設計/231_API_勤怠.md
@@ -24,7 +24,7 @@
     - `source`: 必須。以下のいずれか
         - `web`: PCブラウザ
         - `mobile`: スマートフォン
-        - `ic_card`: ICカードリーダー
+        - `ic_card`: ICカードリーダー（将来対応、初期実装では未対応）
         - `admin`: 管理者代行
     - `happened_at`: 必須。未来時刻不可。
     - `note`: 任意。255文字以内。
@@ -61,4 +61,3 @@
 ### PUT `/api/v1/shift-assignments/bulk`
 マネージャーによるシフトの一括割当。
 - **権限**: Manager以上
-
