--- a/docs/300_開発/300_開発順序.md
+++ b/docs/300_開発/300_開発順序.md
@@ -13,6 +13,218 @@
 4. **テスト駆動開発**: 各機能でテストを実装し、品質を保証
 5. **早期のフィードバック**: 各フェーズで動作確認を行い、問題を早期に発見
 
+### Gitブランチ戦略
+
+#### ブランチ構成
+
+```
+main (本番環境用)
+  ├── develop (開発統合ブランチ)
+  │   ├── feature/phase-0-auth (Phase 0: 認証基盤)
+  │   ├── feature/phase-1-core (Phase 1: コア機能)
+  │   ├── feature/phase-2-advanced (Phase 2: 高度な機能)
+  │   ├── feature/phase-3-payroll (Phase 3: 給与機能)
+  │   └── feature/phase-4-admin (Phase 4: 管理機能)
+  └── release/phase-X (リリース準備ブランチ)
+```
+
+#### ブランチの役割
+
+| ブランチ | 役割 | 説明 |
+| :--- | :--- | :--- |
+| **main** | 本番環境用 | 常にデプロイ可能な状態を保つ。タグでバージョン管理 |
+| **develop** | 開発統合ブランチ | 各フェーズの機能を統合するブランチ。常に動作する状態を保つ |
+| **feature/phase-X** | 機能開発ブランチ | 各フェーズの実装を行うブランチ |
+| **release/phase-X** | リリース準備ブランチ | フェーズ完了時のリリース準備用（必要に応じて） |
+| **hotfix/** | 緊急修正ブランチ | 本番環境の緊急修正用（mainから分岐、mainとdevelopにマージ） |
+
+#### ブランチ運用フロー
+
+1. **機能開発の開始**
+   ```bash
+   # developブランチからfeatureブランチを作成
+   git checkout develop
+   git pull origin develop
+   git checkout -b feature/phase-0-auth
+   ```
+
+2. **開発中のコミット**
+   ```bash
+   # 機能を実装し、コミット
+   git add .
+   git commit -m "feat: ユーザー登録APIの実装"
+   git push origin feature/phase-0-auth
+   ```
+
+3. **フェーズ完了時のマージ**
+   ```bash
+   # developブランチにマージ
+   git checkout develop
+   git pull origin develop
+   git merge feature/phase-0-auth
+   git push origin develop
+   
+   # featureブランチを削除（オプション）
+   git branch -d feature/phase-0-auth
+   git push origin --delete feature/phase-0-auth
+   ```
+
+4. **リリース準備（必要に応じて）**
+   ```bash
+   # releaseブランチを作成
+   git checkout -b release/phase-0 develop
+   # バグ修正、ドキュメント更新等
+   git checkout main
+   git merge release/phase-0
+   git tag -a v0.1.0 -m "Phase 0: 認証基盤完成"
+   git push origin main --tags
+   
+   # developにもマージ
+   git checkout develop
+   git merge release/phase-0
+   git push origin develop
+   ```
+
+#### コミットメッセージ規約
+
+Conventional Commits形式を使用：
+
+```
+<type>(<scope>): <subject>
+
+<body>
+
+<footer>
+```
+
+**Type**:
+- `feat`: 新機能
+- `fix`: バグ修正
+- `docs`: ドキュメントのみの変更
+- `style`: コードの動作に影響しない変更（フォーマット等）
+- `refactor`: リファクタリング
+- `test`: テストの追加・修正
+- `chore`: ビルドプロセスやツールの変更
+
+**例**:
+```
+feat(auth): ユーザー登録APIの実装
+
+- POST /api/v1/auth/register エンドポイントを追加
+- パスワードハッシュ化（bcrypt）を実装
+- バリデーションを追加
+
+Closes #123
+```
+
+#### ブランチ命名規則
+
+- **featureブランチ**: `feature/phase-{0-4}-{機能名}`
+  - 例: `feature/phase-0-auth`, `feature/phase-1-time-clock`
+- **releaseブランチ**: `release/phase-{0-4}`
+  - 例: `release/phase-0`
+- **hotfixブランチ**: `hotfix/{修正内容}`
+  - 例: `hotfix/critical-security-fix`
+
+#### テスト実行のタイミングとブランチ
+
+| テストレベル | 実行ブランチ | 実行タイミング | 説明 |
+| :--- | :--- | :--- | :--- |
+| **単体テスト** | `feature/phase-X` | 開発中（コミット時） | 機能実装と同時にテストを実装・実行。CI/CDで自動実行 |
+| **結合テスト** | `feature/phase-X` | マージ前（Pull Request時） | featureブランチのマージ前に実行。CI/CDで自動実行 |
+| **結合テスト** | `develop` | マージ後（定期的） | developブランチにマージ後、統合テストを実行 |
+| **総合テスト** | `develop` | フェーズ完了時 | 各フェーズ完了時に、主要な業務シナリオを通しで確認 |
+| **総合テスト** | `release/phase-X` | リリース準備時 | リリース準備ブランチで最終確認 |
+| **負荷テスト** | `develop` または `release/phase-X` | フェーズ完了時 | パフォーマンス要件を満たしているか確認 |
+
+#### テスト実行フロー
+
+1. **featureブランチでの開発中**
+   ```bash
+   # 単体テストを実行（開発中）
+   ./gradlew test  # バックエンド
+   pnpm test       # フロントエンド
+   
+   # コミット前に必ずテストを実行
+   git add .
+   git commit -m "feat: 機能実装とテスト追加"
+   ```
+
+2. **Pull Request作成時（feature → develop）**
+   ```bash
+   # CI/CDで自動実行されるテスト
+   - 単体テスト（全テストスイート）
+   - 結合テスト（APIエンドポイント）
+   - コードカバレッジチェック
+   - リンター・フォーマッター
+   ```
+
+3. **developブランチへのマージ後**
+   ```bash
+   # developブランチで統合テストを実行
+   - 結合テスト（全APIエンドポイント）
+   - マルチテナント分離のテスト
+   - データベース統合テスト
+   ```
+
+4. **フェーズ完了時（developブランチ）**
+   ```bash
+   # 総合テストを実行
+   - 主要な業務シナリオのE2Eテスト
+   - 打刻〜承認〜締め〜給与確定の一連の流れ
+   - 負荷テスト（必要に応じて）
+   ```
+
+5. **リリース準備時（releaseブランチ）**
+   ```bash
+   # 最終確認のテスト
+   - 総合テスト（全シナリオ）
+   - 回帰テスト（既存機能の動作確認）
+   - パフォーマンステスト
+   ```
+
+#### CI/CDパイプライン例
+
+```yaml
+# .github/workflows/ci.yml の例
+on:
+  pull_request:
+    branches: [develop, main]
+  push:
+    branches: [develop, main]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 単体テスト（バックエンド）
+        run: ./gradlew test
+      
+      - name: 単体テスト（フロントエンド）
+        run: pnpm test
+      
+      - name: 結合テスト
+        run: ./gradlew integrationTest
+      
+      - name: E2Eテスト
+        run: pnpm test:e2e
+```
+
+#### 保護ルール（推奨）
+
+- **mainブランチ**: 
+  - 直接プッシュ禁止（Pull Request必須）
+  - コードレビュー必須
+  - 全テストがパスしていること
+  - 総合テストがパスしていること
+- **developブランチ**:
+  - 直接プッシュ可能（チーム内で合意した場合）
+  - またはPull Request推奨
+  - 結合テストがパスしていること
+- **featureブランチ**:
+  - 単体テストがパスしていること（コミット前）
+  - Pull Request作成時は結合テストもパスしていること
+
 ## 2. 開発フェーズ概要
 
 | フェーズ | 名称 | 期間目安 | 主要機能 |
@@ -163,7 +375,7 @@
 - [ ] 打刻API
   - `POST /api/v1/time-clock/events`
   - `type`: `in`, `out`, `break_in`, `break_out`
-  - `source`: `web`, `mobile`, `ic_card`, `admin`
+  - `source`: `web`, `mobile`, `ic_card`, `admin`（注: `ic_card`は将来対応、初期実装では`web`と`mobile`のみ）
   - `company_id`, `employee_id`は自動設定
 - [ ] 打刻履歴取得API
   - `GET /api/v1/time-clock/events`
@@ -645,14 +857,13 @@
 
 ## 10. 参考ドキュメント
 
-- [基本設計](./100_基本設計.md): 機能一覧、画面一覧、権限モデル
-- [業務フロー](./110_業務フロー.md): 勤怠から支払までのプロセス
-- [API基本方針](./500_API基本方針.md): REST方針、認証、エラーハンドリング
-- [API仕様_勤怠](./511_API仕様_勤怠.md): 勤怠管理APIの詳細仕様
-- [API仕様_休暇](./512_API仕様_休暇.md): 休暇管理APIの詳細仕様
-- [API仕様_承認](./513_API仕様_承認.md): 承認フローAPIの詳細仕様
-- [API仕様_給与](./514_API仕様_給与.md): 給与管理APIの詳細仕様
-- [DB設計方針](./300_DB設計方針.md): マルチテナント、ソフト削除、監査列
-- [セキュリティ設計](./600_セキュリティ設計.md): 認証認可、個人情報保護
-- [テスト設計](./700_テスト設計.md): テスト方針、重点テスト項目
-
+- [基本設計](../100_BasicDesign/100_基本設計.md): 機能一覧、画面一覧、権限モデル
+- [業務フロー](../100_BasicDesign/110_業務フロー.md): 勤怠から支払までのプロセス
+- [API基本方針](../200_DetailedDesign/206_DetailedDesign_API.md): REST方針、認証、エラーハンドリング
+- [API仕様_勤怠](../200_DetailedDesign/206_DetailedDesign_API_勤怠.md): 勤怠管理APIの詳細仕様
+- [API仕様_休暇](../200_DetailedDesign/206_DetailedDesign_API_休暇.md): 休暇管理APIの詳細仕様
+- [API仕様_承認](../200_DetailedDesign/206_DetailedDesign_API_承認.md): 承認フローAPIの詳細仕様
+- [API仕様_給与](../200_DetailedDesign/206_DetailedDesign_API_給与.md): 給与管理APIの詳細仕様
+- [DB設計方針](../200_DetailedDesign/205_DetailedDesign_Database.md): マルチテナント、ソフト削除、監査列
+- [セキュリティ設計](../200_DetailedDesign/208_DetailedDesign_Security.md): 認証認可、個人情報保護
+- [テスト設計](../400_Test_Operation_Guideline/700_テスト設計.md): テスト方針、重点テスト項目
