--- a/docs/200_詳細設計/230_API.md
+++ b/docs/200_詳細設計/230_API.md
@@ -5,8 +5,32 @@
 
 - **GET**: リソースの取得、一覧表示
 - **POST**: リソースの作成、アクションの実行（計算、承認等）
-- **PUT / PATCH**: リソースの更新（PATCH推奨）
+- **PUT / PATCH**: リソースの更新（使い分けは後述）
 - **DELETE**: リソースの削除（内部的にはソフト削除）
+
+### PUTとPATCHの使い分け
+
+#### PATCH（推奨・通常の更新）
+- **用途**: 単一リソースの部分更新
+- **特徴**: 
+  - 変更したいフィールドのみ送信
+  - 未指定フィールドは変更されない（既存値のまま）
+  - 部分更新に最適
+- **例**: 
+  - `PATCH /api/v1/time-records/{id}` - 勤怠レコードの修正
+  - `PATCH /api/v1/employees/{id}` - 従業員情報の更新
+  - `PATCH /api/v1/groups/{id}` - グループ情報の更新
+
+#### PUT（一括更新・全体置き換え）
+- **用途**: 一括更新、リソース全体の置き換えが必要な場合
+- **特徴**: 
+  - リソース全体を指定
+  - 冪等性が保証される（同じリクエストを何度実行しても結果が同じ）
+  - 一括操作に適している
+- **例**: 
+  - `PUT /api/v1/shift-assignments/bulk` - シフトの一括割当
+
+**原則**: 通常の更新はPATCHを使用し、一括更新や全体置き換えが必要な場合のみPUTを使用する。
 
 ## 2. 認証・認可
 - **方式**: JWT (JSON Web Token) またはセッションベース認証。
@@ -50,4 +74,3 @@
 - すべてのIDには **UUID v7** を使用する。
 - 外部露出するIDもUUIDとし、推測可能な連番（シークエンス）は避ける。
 - **UUID v7の利点**: タイムスタンプベースのため、時系列順にソート可能。勤怠データやログの範囲検索が効率的。
-
