docs: テーブル命名規則の統一、PWA追加、ドキュメントパス修正
- テーブル名をプレフィックス付き命名規則に統一（m_, t_, h_, r_）
- PWA（Progressive Web App）の採用と通知機能を追加
- 運用設計でSlack連携をPWA通知に変更
- ドキュメントパスを新しいディレクトリ構造に合わせて修正
- .cursor/rules、AGENTS.md、README.mdを更新して整合性を確保

変更ファイル:
- docs/: テーブル名の統一、PWA記述の追加、パス修正
- .cursor/rules: テーブル名の例更新、PWA追加、ドキュメントパス修正
- AGENTS.md: テーブル名修正、PWA実装タスク追加、パス修正
- README.md: PWA記述追加、テーブル名修正、パス修正

--- a/docs/000_要件定義/020_用語集.md
+++ b/docs/000_要件定義/020_用語集.md
@@ -9,16 +9,24 @@
 | **従業員 (Employee)** | 特定のテナントとの雇用関係を示す主体。社員番号、入社日、単価設定などを持つ。 |
 | **シフトテンプレート** | 標準的な勤務パターンを定義したもの。時間不定のフレックスや休暇用として、開始・終了時刻を未設定（NULL）にすることも可能。また、複数の固定休憩時間を紐づけることができる。 |
 | **コストセンター** | 費用（給与・残業代）を計上する単位。部署とは別にプロジェクトや店舗単位で設定可能。 |
-| **打刻 (Time Clock)** | 勤務開始、終了などのイベントを記録する行為。`TIME_CLOCK_EVENTS` に生ログとして保存される。 |
-| **日次勤怠レコード** | 打刻イベントを元に、1日単位で集計された労働時間データ（`TIME_RECORDS`）。 |
+| **打刻 (Time Clock)** | 勤務開始、終了などのイベントを記録する行為。`h_time_clock_events` に生ログとして保存される。 |
+| **休憩 (Break)** | 勤務中の短い休憩時間（例：昼休憩12:00-13:00、午後休憩15:00-15:15）。1日の勤務中に複数回発生する可能性がある。`break_in`/`break_out`で打刻管理され、`r_shift_break_templates`でシフトテンプレートに紐づけられる。 |
+| **休暇 (Leave)** | 勤務日全体の休み（例：有給休暇、病休、特別休暇）。1日単位または複数日単位で申請・管理される。`t_leave_requests`で申請され、`m_leave_types`で休暇種別が定義される。 |
+| **日次勤怠レコード** | 打刻イベントを元に、1日単位で集計された労働時間データ（`t_time_records`）。 |
 | **締め (Closing)** | 特定期間（給与計算期間）の勤怠データを確定させ、編集をロックする処理。 |
 | **ロック (Lock)** | 承認済みや締め済みのデータが変更されないよう、システム的にガードをかける状態。 |
 | **給与期間 (Payroll Period)** | 給与計算の対象となる期間（例：毎月1日〜末日）。 |
+| **給与計算 (Payroll)** | 勤怠データを基に給与を計算するプロセス全体。給与期間、給与カレンダー、計算ジョブなどを含む。`m_payroll_calendars`でスケジュールを管理し、`t_payroll_periods`で各期間を管理する。 |
+| **給与明細 (Payslip)** | 給与計算の結果を記録した明細書。各従業員ごとに給与期間ごとに作成される。`t_payslips`でヘッダ情報（総支給、控除合計、差引支給額）を、`r_payslip_lines`で各給与項目の明細を管理する。 |
+| **支払バッチ (Payment)** | 給与明細に基づいて実際の支払処理（銀行振込データ作成など）を行うバッチ。`t_payments`で支払バッチのヘッダを、`r_payment_lines`で各明細への支払を管理する。 |
+| **給与項目 (Pay Item)** | 基本給、残業代、交通費、社会保険料など、給与明細に記載される各項目。`m_pay_items`でマスタとして管理される。支給項目と控除項目を区別し、課税対象かどうかも設定可能。 |
+| **行 (Line)** | 明細書や伝票の各行を表す。給与明細では各給与項目が1行として記録され（`r_payslip_lines`）、支払バッチでは各従業員への支払いが1行として記録される（`r_payment_lines`）。 |
+| **支払日 (Pay Date)** | 実際に給与を支払う日付。給与期間の`pay_date`や支払バッチの`pay_date`で管理される。 |
 | **承認 (Approval)** | 申請された勤怠や休暇を、権限者が確認し確定させるフロー。 |
 | **ソフト削除 (Soft Delete)** | データを物理的に削除せず、`deleted_at` カラムに値を設定して論理的に削除済みとして扱うこと。 |
+| **システムログ** | アプリケーションの動作ログ、エラーログ。デバッグや障害調査用。外部（CloudWatch Logs等）に保管。 |
 | **監査ログ (Audit Logs)** | 「いつ」「誰が」「どのデータを」「どのように変更したか」を記録したログ。RDSに保持される。 |
 | **ジョブログ (Job Runs)** | 給与計算や一括インポートなど、バックグラウンド処理の実行履歴。RDSに保持される。 |
-| **SYSTEM_LOGS** | アプリケーションの動作ログ、エラーログ。デバッグや障害調査用。外部（CloudWatch Logs等）に保管。 |
 | **生ログ (Raw Events)** | 打刻された瞬間の無加工データ。修正は原則不可（削除・再打刻を想定）。 |
 | **配賦 (Allocation)** | 労働時間や人件費を、複数のコストセンターに割り振ること。 |
 | **差分再計算** | 一度確定した給与に対し、過去の勤怠修正等が発生した場合に発生する再計算処理。 |
