--- a/docs/100_基本設計/100_概要.md
+++ b/docs/100_基本設計/100_概要.md
@@ -11,7 +11,7 @@ AuraTimeは、中規模〜大規模組織をターゲットとした、セキュ
 
 ## スコープ
 - **組織管理**: 階層構造（部署、チーム）およびマトリクス構造（コストセンター）の管理
-- **勤怠管理**: Web/モバイルによる打刻、日次集計、シフト割当
+- **勤怠管理**: PWA（Progressive Web App）によるWeb/モバイル打刻、日次集計、シフト割当
 - **休暇管理**: 各種休暇（有給・特休等）の申請・承認、残数管理
 - **給与管理**: 給与形態（月給・時給）に応じた計算、支給・控除項目の自由設定
 - **支払管理**: 銀行振込データ（FBデータ）作成、支払ステータス管理
@@ -28,7 +28,7 @@ AuraTimeは、中規模〜大規模組織をターゲットとした、セキュ
 - **高信頼性**: 全データに対するソフト削除と監査列（作成者・更新者）の保持
 
 ## ID管理モデル（ユーザーと従業員の分離）
-本システムでは、ログイン用の「ユーザー（USERS）」と、会社ごとの雇用契約を司る「従業員（EMPLOYEES）」を分離しています。これにより以下のメリットを実現しています。
+本システムでは、ログイン用の「ユーザー（`m_users`）」と、会社ごとの雇用契約を司る「従業員（`m_employees`）」を分離しています。これにより以下のメリットを実現しています。
 - **兼務・複数所属への対応**: 1つのログインIDで、グループ会社間の兼務や複数テナントへの所属が可能です。
 - **外部専門家への対応**: 社員番号を持たない社外の社労士や税理士なども、同一の認証基盤で管理・権限付与が可能です。
 - **ライフサイクルの柔軟な管理**: 「退職後も一定期間は明細を閲覧可能にする」「再雇用時に以前の履歴と紐付ける」といった運用が容易になります。
@@ -38,4 +38,4 @@ AuraTimeは、中規模〜大規模組織をターゲットとした、セキュ
 - **フルフレックス・時間不定シフト**: コアタイムのない勤務や、1日の労働時間のみが決まっている形態。
 - **非勤務日テンプレート**: 有給休暇、公休、欠勤など、時刻を持たない「状態」としてのシフト割当。
 - **待機・オンコール**: 出勤予定のみを確保し、具体的な時間は当日確定させる運用。
-- **複数休憩の可視化**: 休憩時間を別テーブル（SHIFT_BREAK_TEMPLATES）で管理することで、1日の中で複数回発生する休憩（昼休み、小休憩等）をタイムライン上で正確に表現・集計可能です。
+- **複数休憩の可視化**: 休憩時間を別テーブル（`r_shift_break_templates`）で管理することで、1日の中で複数回発生する休憩（昼休み、小休憩等）をタイムライン上で正確に表現・集計可能です。
