--- a/docs/100_基本設計/110_基本設計.md
+++ b/docs/100_基本設計/110_基本設計.md
@@ -40,8 +40,8 @@
 | | 監査ログ・ジョブ履歴 | System Admin |
 
 詳細な設計図については以下を参照してください。
-- [画面遷移図 (Mermaid)](../200_DetailedDesign/203_DetailedDesign_UI_遷移図.mmd)
-- [画面レイアウト案 (Mermaid)](../200_DetailedDesign/203_DetailedDesign_UI_レイアウト.mmd)
+- [画面遷移図 (Mermaid)](../200_詳細設計/230_UI_遷移図.mmd)
+- [画面レイアウト案 (Mermaid)](../200_詳細設計/231_UI_レイアウト.mmd)
 
 ## 3. 権限モデルとアクセス範囲
 
@@ -61,7 +61,22 @@
 - **データアクセス**: アプリケーション層で、ログインユーザーの `company_id` 以外のデータにアクセスできないよう強制フィルタリングを行う。
 - **改ざん防止**: APIリクエストのパラメータで `company_id` を受け取るのではなく、認証済みトークン（JWT等）から取得する。
 
-### 組織・グループ統合（GROUPS）
-- 部署、勤務地、チーム、コストセンターはすべて `groups.type` で識別。
+### 組織・グループ統合（m_groups）
+- 部署、勤務地、チーム、コストセンターはすべて `m_groups.type` で識別。
 - 階層構造は `parent_group_id` による自己参照で実現。
-- 従業員の所属は `employee_groups` で履歴管理（兼務対応）。
+- 従業員の所属は `h_employee_groups` で履歴管理（兼務対応）。
+
+## 5. 技術スタック
+
+### フロントエンド
+- **フレームワーク**: Next.js（React）
+- **PWA**: Progressive Web App を採用し、モバイルアプリと同等の体験を提供
+  - 通知機能（プッシュ通知）
+  - オフライン対応
+  - ホーム画面への追加
+- **詳細**: [フロントエンド設計](../200_詳細設計/232_フロントエンド設計.md) を参照
+
+### バックエンド
+- **フレームワーク**: Spring Boot（Java）
+- **データベース**: PostgreSQL
+- **認証**: JWT またはセッションベース認証
