--- a/docs/100_基本設計/150_業務フロー.md
+++ b/docs/100_基本設計/150_業務フロー.md
@@ -5,27 +5,27 @@
 システム全体の標準的なサイクルは以下の通りです。
 
 1.  **日次（発生）**:
-    - 従業員が打刻を行う（`TIME_CLOCK_EVENTS` 生成）
-    - システムが日次勤怠（`TIME_RECORDS`）を自動作成/更新
+    - 従業員が打刻を行う（`h_time_clock_events` 生成）
+    - システムが日次勤怠（`t_time_records`）を自動作成/更新
 2.  **月次（確認・申請）**:
     - 従業員が1ヶ月分の勤怠を確認し、修正があれば申請・承認
     - 最終的に「日次勤怠の確定」を行う
 3.  **締め（Admin）**:
-    - Adminが給与期間（`PAYROLL_PERIODS`）を「締め（Closed）」にする
-    - **[ロック]** 該当期間の `TIME_RECORDS` は一切の変更が不可となる
+    - Adminが給与期間（`t_payroll_periods`）を「締め（Closed）」にする
+    - **[ロック]** 該当期間の `t_time_records` は一切の変更が不可となる
 4.  **計算（Admin）**:
-    - Adminが給与計算ジョブを実行（`job_runs` で非同期処理）
-    - `compensation_plans`（単価）と勤怠集計を元に `payslips` を生成
+    - Adminが給与計算ジョブを実行（`t_job_runs` で非同期処理）
+    - `h_compensation_plans`（単価）と勤怠集計を元に `t_payslips` を生成
 5.  **確定・公開（Admin）**:
     - Adminが明細の内容を確認し「確定（Finalized）」にする
     - 従業員が給与明細を閲覧可能になる
 6.  **支払（Admin）**:
-    - 支払バッチ（`payments`）を作成し、振込データ等を出力
+    - 支払バッチ（`t_payments`）を作成し、振込データ等を出力
     - 振込完了後、ステータスを「完了」にする
 
 ## 2. 「生ログ」と「日次集計」の使い分け
 
-| 特徴 | 打刻イベント (TIME_CLOCK_EVENTS) | 勤怠レコード (TIME_RECORDS) |
+| 特徴 | 打刻イベント (h_time_clock_events) | 勤怠レコード (t_time_records) |
 | :--- | :--- | :--- |
 | **役割** | 事実の記録（証跡） | 計算の基礎（集計） |
 | **データ量** | 1日複数（出・退・休憩など） | 1日1レコード |
@@ -38,10 +38,10 @@
 
 | 状態 | ロックされる範囲 | 許可される操作 |
 | :--- | :--- | :--- |
-| **勤怠承認済み** | 該当日の `TIME_RECORDS` | 承認の取り消し（マネージャー以上） |
-| **給与期間：締め(Closed)** | 期間内の全 `TIME_RECORDS`, `LEAVE_REQUESTS` | 給与計算の実行 |
-| **給与明細：確定(Finalized)** | `compensation_plans` (過去分) | 明細の閲覧 |
-| **支払：完了(Done)** | 該当する `payslips` | 特になし |
+| **勤怠承認済み** | 該当日の `t_time_records` | 承認の取り消し（マネージャー以上） |
+| **給与期間：締め(Closed)** | 期間内の全 `t_time_records`, `t_leave_requests` | 給与計算の実行 |
+| **給与明細：確定(Finalized)** | `h_compensation_plans` (過去分) | 明細の閲覧 |
+| **支払：完了(Done)** | 該当する `t_payslips` | 特になし |
 
 ## 4. 差分再計算と修正フロー
 
