--- a/docs/200_詳細設計/222_DDL運用.md
+++ b/docs/200_詳細設計/222_DDL運用.md
@@ -86,5 +86,5 @@ Spring Bootアプリケーション起動時に、未適用のマイグレーシ
 - 重要な変更（大規模データ移行等）の前には手動スナップショットを取得する。
 
 ## 5. RDS 固有設定
-- タイムゾーンは `UTC` を基本とし、表示時に `companies.timezone` に合わせて変換する。
+- タイムゾーンは `UTC` を基本とし、表示時に `m_companies.timezone` に合わせて変換する。
 - 全文検索や地理情報が必要な場合は、適切な拡張（pg_bigm, PostGIS）の導入を検討する。
