--- a/docs/200_詳細設計/270_ログ.md
+++ b/docs/200_詳細設計/270_ログ.md
@@ -11,7 +11,7 @@
     - リクエスト/レスポンスの概要
 - **属性**: `request_id`, `user_id`, `company_id` を必ず含める。
 
-## 2. 監査ログ（audit_logs：RDS保持）
+## 2. 監査ログ（h_audit_logs：RDS保持）
 - **用途**: 「業務上の重要データ」の変更履歴の追跡、不正操作の検知。
 - **対象**: マスタ、勤怠レコード、給与明細、権限設定。
 - **形式**:
@@ -19,15 +19,15 @@
     - `after_data`: 変更後のJSON
 - **検索**: 管理画面から「誰がいつ何をしたか」を容易に検索可能にする。
 
-## 3. ジョブログ（job_runs：RDS保持）
+## 3. ジョブログ（t_job_runs：RDS保持）
 - **用途**: 長時間実行される非同期処理の管理と結果確認。
 - **対象**: 給与計算、データエクスポート、一括インポート。
-- **連携**: `job_run_events` により、処理中の詳細な進捗をユーザーに提示する。
+- **連携**: `h_job_run_events` により、処理中の詳細な進捗をユーザーに提示する。
 
 ## 4. ログの紐付け（request_id）
 - APIリクエスト時に生成される `request_id` を、上記すべてのログに共通して埋め込む。
 - **調査フロー例**:
     1. エラー通知から `request_id` を取得
     2. CloudWatch Logs で例外詳細を確認
-    3. `audit_logs` でそのリクエストが書き換えたデータを確認
-    4. `job_runs` で関連するバッチが走っていなかったか確認
+    3. `h_audit_logs` でそのリクエストが書き換えたデータを確認
+    4. `t_job_runs` で関連するバッチが走っていなかったか確認
