--- a/docs/300_開発/300_開発順序.md
+++ b/docs/300_開発/300_開発順序.md
@@ -393,7 +393,7 @@ jobs:
 
 **バックエンド**
 - [ ] 日次集計ロジック
-  - 打刻イベントから`TIME_RECORDS`を自動生成/更新
+  - 打刻イベントから`t_time_records`を自動生成/更新
   - 労働時間の計算（法定内、残業、深夜、休憩）
   - シフトテンプレートとの照合
 - [ ] 日次集計API
@@ -592,7 +592,7 @@ jobs:
   - `POST /api/v1/payroll-periods`
   - `PATCH /api/v1/payroll-periods/{id}`
   - ステータス管理（`open`, `closed`, `calculated`, `finalized`）
-- [ ] 単価設定（compensation_plans）
+- [ ] 単価設定（h_compensation_plans）
   - `GET /api/v1/compensation-plans`
   - `POST /api/v1/compensation-plans`
   - `PATCH /api/v1/compensation-plans/{id}`
@@ -607,7 +607,7 @@ jobs:
 - [ ] 給与計算ジョブ
   - `POST /api/v1/payroll-periods/{id}/calculate`
   - 非同期バッチ処理（Spring Batch）
-  - ジョブ実行状況の管理（`job_runs`）
+  - ジョブ実行状況の管理（`t_job_runs`）
 - [ ] 明細管理API
   - `GET /api/v1/payslips`
   - `PATCH /api/v1/payslips/{id}`
@@ -857,13 +857,13 @@ jobs:
 
 ## 10. 参考ドキュメント
 
-- [基本設計](../100_BasicDesign/100_基本設計.md): 機能一覧、画面一覧、権限モデル
-- [業務フロー](../100_BasicDesign/110_業務フロー.md): 勤怠から支払までのプロセス
-- [API基本方針](../200_DetailedDesign/206_DetailedDesign_API.md): REST方針、認証、エラーハンドリング
-- [API仕様_勤怠](../200_DetailedDesign/206_DetailedDesign_API_勤怠.md): 勤怠管理APIの詳細仕様
-- [API仕様_休暇](../200_DetailedDesign/206_DetailedDesign_API_休暇.md): 休暇管理APIの詳細仕様
-- [API仕様_承認](../200_DetailedDesign/206_DetailedDesign_API_承認.md): 承認フローAPIの詳細仕様
-- [API仕様_給与](../200_DetailedDesign/206_DetailedDesign_API_給与.md): 給与管理APIの詳細仕様
-- [DB設計方針](../200_DetailedDesign/205_DetailedDesign_Database.md): マルチテナント、ソフト削除、監査列
-- [セキュリティ設計](../200_DetailedDesign/208_DetailedDesign_Security.md): 認証認可、個人情報保護
-- [テスト設計](../400_Test_Operation_Guideline/700_テスト設計.md): テスト方針、重点テスト項目
+- [基本設計](../100_基本設計/110_基本設計.md): 機能一覧、画面一覧、権限モデル
+- [業務フロー](../100_基本設計/150_業務フロー.md): 勤怠から支払までのプロセス
+- [API基本方針](../200_詳細設計/240_API.md): REST方針、認証、エラーハンドリング
+- [API仕様_勤怠](../200_詳細設計/241_API_勤怠.md): 勤怠管理APIの詳細仕様
+- [API仕様_休暇](../200_詳細設計/242_API_休暇.md): 休暇管理APIの詳細仕様
+- [API仕様_承認](../200_詳細設計/243_API_承認.md): 承認フローAPIの詳細仕様
+- [API仕様_給与](../200_詳細設計/244_API_給与.md): 給与管理APIの詳細仕様
+- [DB設計方針](../200_詳細設計/221_DB設計.md): マルチテナント、ソフト削除、監査列
+- [セキュリティ設計](../200_詳細設計/260_セキュリティー.md): 認証認可、個人情報保護
+- [テスト設計](../400_テスト/400_テスト設計.md): テスト方針、重点テスト項目
