--- a/docs/900_リリース/900_運用設計.md
+++ b/docs/900_リリース/900_運用設計.md
@@ -11,8 +11,8 @@
   - RDS Performance Insights: DBコネクション数、クエリパフォーマンス
   - ElastiCache Metrics: キャッシュヒット率
 - **業務監視**: 
-  - CloudWatch Alarms: 失敗した `job_runs` の検知
-  - CloudWatch Logs Insights: 監査ログでの不審な操作の検知
+  - CloudWatch Alarms: 失敗した `t_job_runs` の検知
+  - CloudWatch Logs Insights: `h_audit_logs`での不審な操作の検知
 - **Amplify監視**: 
   - ビルドステータス（成功/失敗）
   - デプロイステータス
@@ -20,15 +20,27 @@
   - ビルド時間の監視
 
 ### アラート通知
-- **Slack連携**: CloudWatch Alarms → SNS → Lambda → Slack
-- **PagerDuty連携**: 重大な障害時の自動エスカレーション
+- **PWA通知**: CloudWatch Alarms → SNS → Lambda → バックエンドAPI → PWA Push Notification
+  - System Adminロールのユーザーに対して、運用アラートをPWA通知で送信
+  - 通知内容: ジョブ実行失敗、パフォーマンス低下、不審な操作検知など
+  - 実装: `POST /api/v1/notifications/push` APIを呼び出し、PWAのPush Subscriptionを利用
+- **PagerDuty連携**: 重大な障害時の自動エスカレーション（確実な通知が必要な場合）
+
+### PWA通知の実装フロー
+1. CloudWatch Alarmがトリガー
+2. SNSトピックに通知
+3. Lambda関数がSNSメッセージを受信
+4. Lambda関数がバックエンドAPI (`POST /api/v1/notifications/push`) を呼び出し
+5. バックエンドがSystem AdminロールのユーザーのPush Subscriptionを取得
+6. Web Push APIでPWA通知を送信
+7. ユーザーの端末でPWA通知が表示される
 
 ## 2. 障害対応フロー
-1.  **検知**: CloudWatch Alarms、Slack、PagerDuty、またはユーザーからの申告
+1.  **検知**: CloudWatch Alarms、PWA通知、PagerDuty、またはユーザーからの申告
 2.  **初期調査**: 
    - `request_id` を元に CloudWatch Logs Insights で検索
    - RDS Performance Insights でDBパフォーマンス確認
-   - `job_runs` / `audit_logs` テーブルを直接確認
+   - `t_job_runs` / `h_audit_logs` テーブルを直接確認
 3.  **応急処置**: 
    - ECSタスクの再起動（AWS Console / CLI）
    - Amplifyアプリの再デプロイ（ビルド失敗時）
