--- a/docs/200_詳細設計/241_API_勤怠.md
+++ b/docs/200_詳細設計/241_API_勤怠.md
@@ -47,7 +47,7 @@
       "start_at": "2025-12-18T09:15:00+09:00",
       "end_at": "2025-12-18T18:15:00+09:00",
       "break_minutes": 60,
-      "cost_group_id": "uuid-of-cost-center"
+      "group_id": "uuid-of-cost-center"
     }
     ```
 - **制限**:
