docs: 開発ガイドラインをフロントエンド・バックエンド別に分割
- フロントエンド開発ガイドライン（313_開発ガイドライン_フロントエンド.md）を追加
  - Next.jsのハイドレーションエラー防止ガイドラインを追加
  - 8つの原則、チェックリスト、よくある問題と対処法を記載

- バックエンド開発ガイドライン（312_開発ガイドライン_バックエンド.md）を追加
  - Spring Boot開発における包括的なガイドラインを追加
  - アーキテクチャ原則、セキュリティ、データベースアクセス、API設計、バッチ処理、監査ログ、例外処理、ログ、テスト、パフォーマンス等を記載

- 開発ガイドライン（311_開発ガイドライン.md）を更新
  - フロントエンド・バックエンド開発ガイドラインへの参照リンクを追加

--- a/docs/200_詳細設計/232_フロントエンド設計.md
+++ b/docs/200_詳細設計/232_フロントエンド設計.md
@@ -12,6 +12,11 @@
 
 ### 技術スタック
 - **フレームワーク**: Next.js（React）
+- **スタイリング**: Tailwind CSS 4.x
+- **UIコンポーネント**: shadcn/ui（詳細はセクション11を参照）
+- **フォーム管理**: React Hook Form
+- **バリデーション**: Zod
+- **データフェッチング**: React Query
 - **PWA実装**: 
   - **推奨**: Next.js公式のPWAサポート（App Router）を活用
     - Next.js 13+のApp Routerを使用
@@ -252,3 +257,165 @@
 - **共有機能**: Web Share APIを活用したデータ共有
 - **位置情報**: 打刻時の位置情報取得（ユーザー許可時）
 - **ICカード連携**: ICカードリーダーとの連携（将来対応）
+
+## 11. UIコンポーネントライブラリ
+
+### shadcn/ui の採用
+
+**採用理由:**
+- **カスタマイズ性**: コンポーネントがプロジェクト内にコピーされるため、完全にカスタマイズ可能
+- **TypeScript対応**: 完全なTypeScriptサポートにより、型安全性が確保される
+- **Tailwind CSS統合**: Tailwind CSS 4.xと完全に統合され、一貫したスタイリングが可能
+- **アクセシビリティ**: WAI-ARIA準拠のコンポーネントにより、アクセシビリティが担保される
+- **保守性**: 必要なコンポーネントのみをインストール可能で、バンドルサイズを最適化
+- **コミュニティ**: 活発なコミュニティと豊富なコンポーネントライブラリ
+
+**使用方針:**
+- **基本コンポーネント**: Button, Input, Select, Dialog, Table等の基本UIコンポーネントはshadcn/uiを使用
+- **カスタムコンポーネント**: 業務固有のコンポーネント（打刻ボタン、勤怠カレンダー等）は、shadcn/uiをベースに拡張して実装
+- **デザインシステム**: デザインの一貫性を保つため、shadcn/uiのテーマ設定（`components.json`）を活用
+- **コンポーネント追加**: 新規コンポーネントが必要な場合は、shadcn/ui CLIを使用して追加
+
+**セットアップ:**
+- **設定ファイル**: `components.json`でshadcn/uiの設定を管理
+  - コンポーネントの配置先（`src/components/ui`）
+  - Tailwind CSSの設定パス
+  - スタイル設定（デフォルト、ダークモード等）
+- **テーマカスタマイズ**: `tailwind.config.js`でテーマカラーをカスタマイズ
+- **コンポーネントインストール**: `npx shadcn-ui@latest add [component-name]`でコンポーネントを追加
+
+**主要な使用コンポーネント:**
+| コンポーネント | 用途 | 使用画面例 |
+|:---|:---|:---|
+| **Button** | アクションボタン | 打刻画面、承認画面 |
+| **Input** | テキスト入力 | ログイン画面、検索フォーム |
+| **Select** | 選択肢 | フィルター、ドロップダウン |
+| **Dialog** | モーダルダイアログ | 確認ダイアログ、詳細表示 |
+| **Table** | データ一覧 | 勤怠一覧、従業員一覧 |
+| **Calendar** | カレンダー | 勤怠カレンダー、シフト管理 |
+| **Form** | フォーム | 申請フォーム、設定画面 |
+| **Card** | カード表示 | ダッシュボード、統計表示 |
+| **Toast** | 通知表示 | 成功/エラーメッセージ |
+
+**注意事項:**
+- **技術選定の固定化**: 現時点での選定であり、将来の要件変更に応じて再検討の可能性がある
+- **バージョン管理**: shadcn/uiのコンポーネントはプロジェクト内にコピーされるため、バージョンアップ時の影響範囲を確認する必要がある
+- **カスタマイズの記録**: shadcn/uiのコンポーネントをカスタマイズした場合は、変更内容を記録し、バージョンアップ時の影響を把握する
+
+**参考リソース:**
+- [shadcn/ui 公式ドキュメント](https://ui.shadcn.com/)
+- [shadcn/ui GitHub](https://github.com/shadcn-ui/ui)
+- [Radix UI（shadcn/uiの基盤）](https://www.radix-ui.com/)
+
+## 12. UIデザインリファレンス
+
+### デザインリファレンスリポジトリ
+
+実装時の参考として、以下のリポジトリを参照してください：
+
+- **リポジトリ**: [AuraTime_design_reference](https://github.com/mshrynzw/AuraTime_design_reference)
+- **目的**: UIコンポーネントの構造とデザインパターンの参考
+- **技術スタック**: Next.js 13.5.1, React 18.2.0, Tailwind CSS 3.3.3, shadcn/ui
+
+### リポジトリの目的
+
+本リポジトリは、Bolt.newで生成されたAuraTimeのUIデザインリファレンスコードです。実際のAuraTimeプロジェクトのフロントエンド実装時の参考として使用します。
+
+**主な用途:**
+1. **デザインパターンの参考**: UIコンポーネントの構造とデザインパターンを確認
+2. **実装の参考**: 実際のAuraTimeプロジェクトに統合する際の実装方法の参考
+3. **デザインのバージョン管理**: デザインの変更履歴を追跡
+
+### 主要画面のリファレンス
+
+リポジトリには以下の主要画面が実装されています：
+
+#### 従業員向け画面
+- **ダッシュボード**: クイック統計、打刻エリア、直近の打刻履歴
+- **打刻画面**: 大きな時計表示、出勤/退勤/休憩入/休憩戻ボタン
+- **勤怠一覧**: カレンダービュー、日別の労働時間表示
+- **休暇申請**: 休暇申請フォーム、残数表示、申請履歴
+- **給与明細**: 給与期間別の明細一覧、PDFダウンロード
+
+#### マネージャー向け画面
+- **承認待ち一覧**: 承認待ちの申請一覧、承認/却下操作
+- **シフト管理**: カレンダービューでのシフト表示、シフト割当
+
+#### 管理者向け画面
+- **給与期間管理**: 給与期間一覧、締め操作、給与計算ジョブ実行
+- **マスタ管理**: 従業員、グループ、シフトテンプレートの管理
+
+#### システム管理者向け画面
+- **監査ログ**: ログ一覧、フィルタリング、詳細表示
+
+### 使用方法
+
+#### セットアップ
+```bash
+# リポジトリのクローン
+git clone https://github.com/mshrynzw/AuraTime_design_reference.git
+
+# 依存関係のインストール
+npm install
+
+# 開発サーバーの起動
+npm run dev
+```
+
+#### 実装時の活用方法
+
+1. **コンポーネント構造の確認**
+   - `components/` ディレクトリ内のコンポーネント構造を確認
+   - レイアウトコンポーネント（`MainLayout.tsx`, `Header.tsx`, `Sidebar.tsx`）の実装を参考
+
+2. **画面実装の参考**
+   - `app/` ディレクトリ内の各画面の実装を参考
+   - ルーティング構造、データフェッチング方法を確認
+
+3. **スタイリングの参考**
+   - Tailwind CSSのクラス使用例を確認
+   - shadcn/uiコンポーネントのカスタマイズ方法を参考
+
+4. **デザインシステムの確認**
+   - カラーパレット、タイポグラフィ、スペーシングの一貫性を確認
+   - コンポーネント間のデザインの統一性を参考
+
+### 注意事項
+
+- **参考実装**: 本リポジトリは参考実装であり、実際のAuraTimeプロジェクトとは技術スタックのバージョンが異なる場合があります
+- **認証**: 参考実装ではSupabaseを使用していますが、実際のAuraTimeプロジェクトではSpring Bootの認証APIを使用します
+- **データ構造**: 参考実装のデータ構造は簡略化されている場合があります。実際の実装時は、API仕様書（`docs/200_詳細設計/240_API.md`等）を参照してください
+
+### プロジェクト構造
+
+```
+AuraTime_design_reference/
+├── app/                    # Next.js App Router
+│   ├── dashboard/          # ダッシュボード画面
+│   ├── time-clock/         # 打刻画面
+│   ├── attendance/         # 勤怠一覧画面
+│   ├── leave-requests/     # 休暇申請画面
+│   ├── approvals/          # 承認待ち一覧画面
+│   ├── shifts/             # シフト管理画面
+│   ├── payroll-periods/    # 給与期間管理画面
+│   ├── payroll/            # 給与明細画面
+│   ├── master/             # マスタ管理画面
+│   ├── audit-logs/         # 監査ログ画面
+│   └── login/              # ログイン画面
+├── components/
+│   ├── layout/             # レイアウトコンポーネント
+│   │   ├── MainLayout.tsx  # メインレイアウト
+│   │   ├── Header.tsx      # ヘッダー
+│   │   └── Sidebar.tsx     # サイドバー
+│   └── ui/                 # Shadcn UIコンポーネント
+├── lib/                    # ユーティリティ
+│   ├── auth/               # 認証関連
+│   └── utils.ts            # 共通ユーティリティ
+└── hooks/                  # カスタムフック
+```
+
+### 関連ドキュメント
+
+- **UIレイアウト**: [`231_UI_レイアウト.mmd`](./231_UI_レイアウト.mmd) - UIレイアウトのMermaid図
+- **API仕様**: [`240_API.md`](./240_API.md) - API設計方針
+- **開発ガイドライン**: [`../300_開発/311_開発ガイドライン.md`](../300_開発/311_開発ガイドライン.md)
