--- a/docs/300_開発/300_概要.md
+++ b/docs/300_開発/300_概要.md
@@ -17,11 +17,11 @@
 
 | フェーズ | 名称 | 期間目安 | 主要機能 | 詳細ドキュメント |
 | :--- | :--- | :--- | :--- | :--- |
-| **Phase 0** | 基盤構築 | 2-3週間 | 認証・認可、監査ログ基盤 | [Phase 0詳細](./320_Phase0_基盤構築.md) |
-| **Phase 1** | コア機能（MVP） | 4-6週間 | 打刻、勤怠管理、マスタ管理 | [Phase 1詳細](./321_Phase1_コア機能.md) |
-| **Phase 2** | 高度な機能 | 3-4週間 | 休暇管理、シフト管理、承認フロー | [Phase 2詳細](./322_Phase2_高度な機能.md) |
-| **Phase 3** | 給与機能 | 4-6週間 | 給与計算、明細管理、支払管理 | [Phase 3詳細](./323_Phase3_給与機能.md) |
-| **Phase 4** | 管理・監査機能 | 2-3週間 | 監査ログ参照、ジョブ管理、システム管理 | [Phase 4詳細](./324_Phase4_管理監査機能.md) |
+| **Phase 0** | 基盤構築 | 2-3週間 | 認証・認可、監査ログ基盤 | [Phase 0詳細](./320_Phase0-0_基盤構築.md) |
+| **Phase 1** | コア機能（MVP） | 4-6週間 | 打刻、勤怠管理、マスタ管理 | [Phase 1詳細](./321-0_Phase1_コア機能.md) |
+| **Phase 2** | 高度な機能 | 3-4週間 | 休暇管理、シフト管理、承認フロー | [Phase 2詳細](./322-0_Phase2_高度な機能.md) |
+| **Phase 3** | 給与機能 | 4-6週間 | 給与計算、明細管理、支払管理 | [Phase 3詳細](./323-0_Phase3_給与機能.md) |
+| **Phase 4** | 管理・監査機能 | 2-3週間 | 監査ログ参照、ジョブ管理、システム管理 | [Phase 4詳細](./324-0_Phase4_管理監査機能.md) |
 
 ## 3. 関連ドキュメント
 
@@ -31,11 +31,11 @@
 
 ### 3.2 各フェーズの詳細
 
-- [Phase 0: 基盤構築](./320_Phase0_基盤構築.md): 認証・認可、監査ログ基盤
-- [Phase 1: コア機能（MVP）](./321_Phase1_コア機能.md): 打刻、勤怠管理、マスタ管理
-- [Phase 2: 高度な機能](./322_Phase2_高度な機能.md): 休暇管理、シフト管理、承認フロー
-- [Phase 3: 給与機能](./323_Phase3_給与機能.md): 給与計算、明細管理、支払管理
-- [Phase 4: 管理・監査機能](./324_Phase4_管理監査機能.md): 監査ログ参照、ジョブ管理、システム管理
+- [Phase 0: 基盤構築](./320_Phase0n_基盤構築.md): 認証・認可、監査ログ基盤
+- [Phase 1: コア機能（MVP）](./321_Phase1-0_コア機能.md): 打刻、勤怠管理、マスタ管理
+- [Phase 2: 高度な機能](./322_Phase2-0_高度な機能.md): 休暇管理、シフト管理、承認フロー
+- [Phase 3: 給与機能](./323_Phase3-0_給与機能.md): 給与計算、明細管理、支払管理
+- [Phase 4: 管理・監査機能](./324-0_Phase4_管理監査機能.md): 監査ログ参照、ジョブ管理、システム管理
 
 ### 3.3 開発ガイドライン
 
