feat(docs): 新規ユーザー登録を招待トークン方式に変更
- 招待トークン方式のユーザー登録
- パスワードリセット機能
- ライセンス数チェック（簡易版）
- 一括招待
- 招待取り消し
- 招待履歴
- ライセンス数チェック（完全版）

--- a/docs/300_開発/320_Phase0-0_基盤構築.md
+++ b/docs/300_開発/320_Phase0-0_基盤構築.md
@@ -19,21 +19,39 @@
 
 #### バックエンド（Spring Boot）
 
-- [ ] ユーザー登録API
-  - `POST /api/v1/auth/register`
+- [ ] データベーステーブル作成
+  - `t_user_invitations`テーブル（招待トークン管理）
+  - `t_password_reset_tokens`テーブル（パスワードリセットトークン管理）
+  - `m_companies.max_users`カラム追加（簡易ライセンス数管理）
+
+- [ ] 招待トークン方式のユーザー登録
+  - `POST /api/v1/invitations`（単一招待発行、Admin権限）
+  - `GET /api/v1/auth/invitations/{token}`（招待情報取得、公開）
+  - `POST /api/v1/auth/register`（招待トークン必須に変更）
+  - 既存ユーザーと新規ユーザーの分岐処理
+  - ライセンス数チェック（簡易版：`m_companies.max_users`を使用）
   - パスワードハッシュ化（bcrypt/Argon2）
   - バリデーション
+
 - [ ] ログインAPI
   - `POST /api/v1/auth/login`
   - JWT発行（user_id, company_id, roleを含む）
   - トークン有効期限の設定
+
+- [ ] パスワードリセット機能
+  - `POST /api/v1/auth/password-reset/request`（リセット要求）
+  - `POST /api/v1/auth/password-reset/confirm`（リセット実行）
+  - パスワードリセットメール送信
+
 - [ ] JWT検証ミドルウェア
   - トークンの検証
   - `company_id`の取得
   - ロールの取得
+
 - [ ] 認可チェック
   - `@PreAuthorize`アノテーション（Spring Security）
   - ロールベースアクセス制御（RBAC）
+
 - [ ] マルチテナント分離
   - グローバルフィルターで`company_id`を自動設定
   - 他社データへのアクセスを防止（403 Forbidden）
@@ -42,14 +60,29 @@
 
 - [ ] ログイン画面
   - メールアドレス・パスワード入力
+  - 「パスワードを忘れた場合」リンク追加
   - エラーハンドリング
+
+- [ ] パスワードリセット画面
+  - メールアドレス入力フォーム
+  - リセットトークン入力フォーム
+  - 新パスワード設定フォーム
+
+- [ ] ユーザー登録画面
+  - 招待トークン入力欄
+  - 既存ユーザーと新規ユーザーの分岐表示
+  - 既存ユーザー：社員番号のみ入力
+  - 新規ユーザー：氏名、カナ、パスワード入力
+
 - [ ] 認証状態管理
   - JWTの保存（httpOnly cookie推奨）
   - 認証状態の確認
   - ログアウト機能
+
 - [ ] 認証ガード
   - 未認証ユーザーのリダイレクト
   - 認証済みユーザーのみアクセス可能なページ
+
 - [ ] PWA実装
   - Next.js公式のPWAサポートを活用
   - Service Workerの実装
@@ -71,16 +104,30 @@
 
 | メソッド | エンドポイント | 権限 | 説明 |
 | :--- | :--- | :--- | :--- |
-| POST | `/api/v1/auth/register` | なし | ユーザー登録 |
+| POST | `/api/v1/invitations` | Admin | 招待トークン発行（単一） |
+| GET | `/api/v1/auth/invitations/{token}` | なし | 招待情報取得（公開） |
+| POST | `/api/v1/auth/register` | なし | ユーザー登録（招待トークン必須） |
 | POST | `/api/v1/auth/login` | なし | ログイン |
 | POST | `/api/v1/auth/logout` | 認証済み | ログアウト |
 | GET | `/api/v1/auth/me` | 認証済み | 現在のユーザー情報取得 |
+| POST | `/api/v1/auth/password-reset/request` | なし | パスワードリセット要求 |
+| POST | `/api/v1/auth/password-reset/confirm` | なし | パスワードリセット実行 |
 
 ## 4. テスト項目
 
+- [ ] 招待トークン発行のテスト
+  - 正常系：有効な招待トークン発行
+  - 異常系：ライセンス数超過、無効なパラメータ
 - [ ] ユーザー登録のテスト
-  - 正常系：新規ユーザー登録
+  - 正常系：新規ユーザー登録（招待トークン使用）
+  - 正常系：既存ユーザーの追加登録（招待トークン使用）
+  - 異常系：無効な招待トークン、期限切れトークン
   - 異常系：重複メールアドレス、バリデーションエラー
+  - 異常系：ライセンス数超過
+- [ ] パスワードリセットのテスト
+  - 正常系：パスワードリセット要求
+  - 正常系：パスワードリセット実行
+  - 異常系：無効なトークン、期限切れトークン
 - [ ] ログインのテスト
   - 正常系：正しい認証情報でログイン
   - 異常系：間違った認証情報、存在しないユーザー
@@ -96,6 +143,10 @@
 
 ## 5. 完了基準
 
+- [ ] 招待トークン方式のユーザー登録が正常に動作する
+- [ ] 既存ユーザーと新規ユーザーの分岐処理が正しく動作する
+- [ ] ライセンス数チェック（簡易版）が正しく動作する
+- [ ] パスワードリセット機能が正常に動作する
 - [ ] ユーザー登録・ログインが正常に動作する
 - [ ] JWTが正しく発行・検証される
 - [ ] マルチテナント分離が正しく動作する（他社データにアクセスできない）
