--- a/docs/300_開発/321_Phase1-0_コア機能.md
+++ b/docs/300_開発/321_Phase1-0_コア機能.md
@@ -29,12 +29,26 @@
   - `POST /api/v1/shift-templates`
   - `PATCH /api/v1/shift-templates/{id}`
 
+- [ ] 招待管理機能
+  - `GET /api/v1/invitations`（招待一覧取得、フィルタリング・ページング対応）
+  - `POST /api/v1/invitations/bulk`（一括招待発行、CSV/Excelインポート対応）
+  - `POST /api/v1/invitations/{id}/cancel`（招待取り消し）
+  - `POST /api/v1/invitations/{id}/resend`（招待再送信）
+  - `POST /api/v1/invitations/{id}/send-email`（招待メール送信）
+
 #### フロントエンド
 
 - [ ] 会社設定画面（System Admin）
 - [ ] グループ管理画面（Admin）
 - [ ] 従業員マスタ画面（Admin）
 - [ ] シフトテンプレート管理画面（Admin）
+- [ ] 招待管理画面（Admin）
+  - 招待一覧表示（ステータス、有効期限、使用状況）
+  - 招待発行（単一・一括）
+  - 招待取り消し
+  - 招待再送信
+  - 招待メール送信
+  - 招待履歴の確認
 
 ### 2.2 打刻機能（Employee）
 
@@ -93,6 +107,11 @@
 | PATCH | `/api/v1/employees/{id}` | Admin | 従業員更新 |
 | GET | `/api/v1/shift-templates` | Admin | シフトテンプレート一覧 |
 | POST | `/api/v1/shift-templates` | Admin | シフトテンプレート作成 |
+| GET | `/api/v1/invitations` | Admin | 招待一覧取得 |
+| POST | `/api/v1/invitations/bulk` | Admin | 一括招待発行 |
+| POST | `/api/v1/invitations/{id}/cancel` | Admin | 招待取り消し |
+| POST | `/api/v1/invitations/{id}/resend` | Admin | 招待再送信 |
+| POST | `/api/v1/invitations/{id}/send-email` | Admin | 招待メール送信 |
 | POST | `/api/v1/time-clock/events` | Employee | 打刻イベント作成 |
 | GET | `/api/v1/time-clock/events` | Employee | 打刻履歴取得 |
 | GET | `/api/v1/time-records` | Employee | 日次勤怠一覧取得 |
@@ -103,6 +122,13 @@
   - グループの作成・更新・削除
   - 従業員の作成・更新
   - シフトテンプレートの作成
+- [ ] 招待管理のテスト
+  - 招待一覧の取得（フィルタリング・ページング）
+  - 一括招待の発行
+  - 招待の取り消し
+  - 招待の再送信
+  - 招待メールの送信
+  - 招待履歴の確認
 - [ ] 打刻機能のテスト
   - 出勤・退勤・休憩の打刻
   - 打刻履歴の取得
@@ -115,6 +141,9 @@
 ## 5. 完了基準
 
 - [ ] 管理者がマスタデータを管理できる
+- [ ] 管理者が招待を発行・管理できる（単一・一括）
+- [ ] 管理者が招待を取り消し・再送信できる
+- [ ] 管理者が招待履歴を確認できる
 - [ ] 従業員が打刻できる
 - [ ] 打刻履歴を確認できる
 - [ ] 日次集計が自動的に実行される
