--- a/docs/300_開発/324_Phase4-0_管理監査機能.md
+++ b/docs/300_開発/324_Phase4-0_管理監査機能.md
@@ -54,6 +54,11 @@
   - `GET /api/v1/contracts`
   - `POST /api/v1/contracts`
   - `PATCH /api/v1/contracts/{id}`
+  - プランごとのライセンス数管理（`max_users`）
+- [ ] ライセンス管理API（完全版）
+  - `GET /api/v1/companies/{id}/license-status`（ライセンス使用状況取得）
+  - 契約テーブル（`t_contracts`）との連携
+  - ライセンス数超過時の警告・制限
 - [ ] 全ユーザー・権限管理API
   - `GET /api/v1/users`
   - `PATCH /api/v1/users/{id}`
@@ -63,6 +68,10 @@
 
 - [ ] 会社設定管理画面（System Admin）
 - [ ] 契約・プラン管理画面（System Admin）
+- [ ] ライセンス管理画面（System Admin）
+  - ライセンス使用状況の可視化
+  - ライセンス数超過時の警告表示
+  - プランごとのライセンス数設定
 - [ ] 全ユーザー・権限管理画面（System Admin）
 
 ## 3. APIエンドポイント
@@ -77,6 +86,8 @@
 | POST | `/api/v1/companies` | System Admin | 会社作成 |
 | GET | `/api/v1/contracts` | System Admin | 契約一覧取得 |
 | POST | `/api/v1/contracts` | System Admin | 契約作成 |
+| PATCH | `/api/v1/contracts/{id}` | System Admin | 契約更新 |
+| GET | `/api/v1/companies/{id}/license-status` | System Admin | ライセンス使用状況取得 |
 | GET | `/api/v1/users` | System Admin | 全ユーザー一覧取得 |
 | PATCH | `/api/v1/users/{id}` | System Admin | ユーザー更新 |
 | PATCH | `/api/v1/company-memberships/{id}` | System Admin | 権限更新 |
@@ -93,6 +104,10 @@
 - [ ] システム管理のテスト
   - 会社設定の管理
   - 契約・プランの管理
+  - ライセンス管理（完全版）のテスト
+    - 契約テーブルとの連携
+    - ライセンス数超過時の警告・制限
+    - ライセンス使用状況の取得
   - 全ユーザー・権限の管理
 
 ## 5. 完了基準
@@ -101,6 +116,11 @@
 - [ ] ジョブ実行状況を確認できる
 - [ ] ジョブを再実行できる
 - [ ] システム管理機能が正常に動作する
+- [ ] 契約・プラン管理が正常に動作する
+- [ ] ライセンス管理（完全版）が正常に動作する
+  - 契約テーブルとの連携が正しく動作する
+  - ライセンス数超過時の警告・制限が正しく動作する
+  - ライセンス使用状況が正しく表示される
 - [ ] 全てのテストがパスする
 
 ## 6. 依存関係
